WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98965
[WK2] Safari crashes on error when using CFNetwork
https://bugs.webkit.org/show_bug.cgi?id=98965
Summary
[WK2] Safari crashes on error when using CFNetwork
Benjamin Poulain
Reported
2012-10-10 16:19:41 PDT
<
rdar://problem/12474758
>
Attachments
Patch
(4.26 KB, patch)
2012-10-10 16:51 PDT
,
Benjamin Poulain
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2012-10-10 16:51:34 PDT
Created
attachment 168094
[details]
Patch
Benjamin Poulain
Comment 2
2012-10-10 19:24:37 PDT
Committed
r130996
: <
http://trac.webkit.org/changeset/130996
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug