third_party/WebKit/Source/WebCore/platform/network/mac/ResourceErrorMac.mm
@@ -38,6 +38,22 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
+static RetainPtr<NSError> createNSErrorFromResourceErrorBase(const ResourceErrorBase& resourceError)
+{
+    RetainPtr<NSMutableDictionary> userInfo(AdoptNS, [[NSMutableDictionary alloc] init]);
+
+    if (!resourceError.localizedDescription().isEmpty())
+        [userInfo.get() setValue:resourceError.localizedDescription() forKey:NSLocalizedDescriptionKey];
+
+    if (!resourceError.failingURL().isEmpty()) {
+        RetainPtr<NSURL> cocoaURL = adoptNS([[NSURL alloc] initWithString:resourceError.failingURL()]);
+        [userInfo.get() setValue:resourceError.failingURL() forKey:@"NSErrorFailingURLStringKey"];
+        [userInfo.get() setValue:cocoaURL.get() forKey:@"NSErrorFailingURLKey"];
+    }
+
+    return RetainPtr<NSError>(AdoptNS, [[NSError alloc] initWithDomain:resourceError.domain() code:resourceError.errorCode() userInfo:userInfo.get()]);
+}
+
 #if USE(CFNETWORK)
 
 ResourceError::ResourceError(NSError *error)
@@ -53,11 +69,18 @@ NSError *ResourceError::nsError() const
         ASSERT(!m_platformError);
         return nil;
     }
-    if (!m_platformNSError) {
+
+    if (m_platformNSError)
+        return m_platformNSError.get();
+
+    if (m_platformError) {
         CFErrorRef error = m_platformError.get();
         RetainPtr<NSDictionary> userInfo(AdoptCF, (NSDictionary *) CFErrorCopyUserInfo(error));
         m_platformNSError.adoptNS([[NSError alloc] initWithDomain:(NSString *)CFErrorGetDomain(error) code:CFErrorGetCode(error) userInfo:userInfo.get()]);
+        return m_platformNSError.get();
     }
+
+    m_platformNSError = createNSErrorFromResourceErrorBase(*this);
     return m_platformNSError.get();
 }
 
@@ -114,21 +137,9 @@ NSError *ResourceError::nsError() const
         ASSERT(!m_platformError);
         return nil;
     }
-    
-    if (!m_platformError) {
-        RetainPtr<NSMutableDictionary> userInfo(AdoptNS, [[NSMutableDictionary alloc] init]);
 
-        if (!m_localizedDescription.isEmpty())
-            [userInfo.get() setValue:m_localizedDescription forKey:NSLocalizedDescriptionKey];
-
-        if (!m_failingURL.isEmpty()) {
-            RetainPtr<NSURL> cocoaURL = adoptNS([[NSURL alloc] initWithString:m_failingURL]);
-            [userInfo.get() setValue:m_failingURL forKey:@"NSErrorFailingURLStringKey"];
-            [userInfo.get() setValue:cocoaURL.get() forKey:@"NSErrorFailingURLKey"];
-        }
-
-        m_platformError.adoptNS([[NSError alloc] initWithDomain:m_domain code:m_errorCode userInfo:userInfo.get()]);
-    }
+    if (!m_platformError)
+        m_platformError = createNSErrorFromResourceErrorBase(*this);;
 
     return m_platformError.get();
 }
